// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Invalid #1 1`] = `
"#### ⌨️ Code

      1 | query { hasId { name } }

#### ⚙️ Options

    {
      "typePolicies": {
        "KeyFieldType": {
          "keyFields": [
            "objectId"
          ]
        }
      }
    }

#### ❌ Error

    > 1 | query { hasId { name } }
        |               ^^^^^^^ The key-field "id" must be selected for proper Apollo Client store denormalisation purposes.

#### 🔧 Autofix output

      1 | query { hasId { id
      2 | name } }"
`;

exports[`Invalid #2 1`] = `
"#### ⌨️ Code

      1 | query { keyField { id name } }

#### ⚙️ Options

    {
      "typePolicies": {
        "KeyFieldType": {
          "keyFields": [
            "objectId"
          ]
        }
      }
    }

#### ❌ Error

    > 1 | query { keyField { id name } }
        |                  ^^^^^^^^^^ The key-field "objectId" must be selected for proper Apollo Client store denormalisation purposes.

#### 🔧 Autofix output

      1 | query { keyField { objectId
      2 | id name } }"
`;
